option('frida_version',
  type: 'string',
  value: '',
  description: 'Frida version, such as 16.2.2 or 16.2.2-dev.27',
)

option('graft_tool',
  type: 'feature',
  value: 'auto',
  description: 'Build gum-graft tool',
)

option('diet',
  type: 'boolean',
  value: false,
  description: 'Optimize for minimal footprint'
)

option('allocator',
  type: 'combo',
  choices: ['auto', 'internal', 'system'],
  value: 'auto',
  description: 'Which memory allocator to use'
)

option('jailbreak',
  type: 'feature',
  value: 'auto',
  description: 'Include jailbreak-specific integrations'
)

option('gumpp',
  type: 'feature',
  value: 'disabled',
  description: 'Build C++ bindings'
)

option('gumjs',
  type: 'feature',
  value: 'disabled',
  description: 'Build JavaScript bindings'
)

option('quickjs',
  type: 'feature',
  value: 'enabled',
  description: 'Build JavaScript bindings with QuickJS runtime included'
)

option('v8',
  type: 'feature',
  value: 'auto',
  description: 'Build JavaScript bindings with V8 runtime included'
)

option('database',
  type: 'feature',
  value: 'auto',
  description: 'Build JavaScript bindings with Database API included'
)

option('devkits',
  type: 'array',
  choices: ['gum', 'gumjs'],
  value: [],
  description: 'Devkits to build'
)

option('devkit_symbol_scope',
  type: 'combo',
  choices: ['prefixed', 'original'],
  value: 'prefixed',
  description : 'How devkit generation treats third-party symbols:\n'
                + ' - prefixed: add the \'_frida_\' prefix\n'
                + ' - original: keep symbols exactly as upstream\n'
)

option('tests',
  type: 'feature',
  value: 'auto',
  description: 'Build tests'
)
