option('gumpp',
  type: 'feature',
  value: 'enabled',
  description: 'Build C++ bindings'
)

option('gumjs',
  type: 'feature',
  value: 'enabled',
  description: 'Build JavaScript bindings'
)

option('quickjs',
  type: 'feature',
  value: 'enabled',
  description: 'Build JavaScript bindings with QuickJS runtime included'
)

option('v8',
  type: 'feature',
  value: 'auto',
  description: 'Build JavaScript bindings with V8 runtime included'
)

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build tests'
)
